# RAG_Asistent

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  TZ_ARCHITECTURE.txt  main.py  project_files_list.txt  pyproject.toml  requirements.txt
config/: __init__.py  settings.py
scripts/: crawl_sumdu.py  index_documents.py  init_db.py
src/: __init__.py
src/api/: deps.py
src/api/routes/: documents.py  health.py  query.py
src/db/: session.py
src/embeddings/: __init__.py  embedder.py
src/models/: database.py  schemas.py
src/rag/: __init__.py  generator.py  pipeline.py  retriever.py
src/services/: crawler_service.py  document_service.py  query_service.py
src/sgr/: __init__.py  reasoner.py  schemas.py
src/utils/: text_utils.py
tests/: __init__.py
tests/unit/: test_crawler_service.py  test_retriever.py  test_text_utils.py
