[project]
name = "rag-asistent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cohere>=5.20.0",
    "crawl4ai>=0.7.8",
    "fastapi>=0.124.4",
    "openai>=2.11.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pydantic-ai>=1.32.0",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.4.2",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.45",
    "tiktoken>=0.12.0",
    "uvicorn>=0.38.0",
]
